--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Hello</title>
 
   <style>
-    @import url(https://fonts.googleapis.com/css?family=Khula:700);
+    @import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap');
 
     body {
       background: #111;
@@ -19,7 +19,7 @@
     }
 
     .console-container {
-      font-family: Khula;
+      font-family: 'Fuzzy Bubbles', cursive;
       font-size: 4em;
       text-align: center;
       height: 200px;
