--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@700&display=swap');
 
     body {
-      background: #111;
+      background-image: url('https://cdn.jetphotos.com/full/6/38334_1663183567.jpg');
     }
 
     .hidden {
