--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Vārds AAAA!', 'Vārds BBBB!', '*apsveikums*'], 'text', ['tomato', 'rebeccapurple', 'lightblue']);
+    consoleText(['Vārds AAAA!', 'Vārds BBBB!', '*apsveikums*'], 'text', [#CDDA32, 'blurple', 'lightbluishgray']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
