--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <script>
-    consoleText(['Vārds AAAA!', 'Vārds BBBB!', '*apsveikums*'], 'text', ['#CDDA32', 'blurple', 'lightbluishgray']);
+    consoleText(['Vārds AAAA!', 'Vārds BBBB!', '*apsveikums*'], 'text', ['#CDDA32', 'blurple', 'yellow']);
 
     function consoleText(words, id, colors) {
       if (colors === undefined) colors = ['#fff'];
